# SinaloNews

./: README.md  TASKS.md  deploy.sh
ai-agent/: .env.example  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
ai-agent/scripts/: ai-agent.sh  fly-setup.sh
ai-agent/src/: agent.py  config.py  database.py  indexer.py  main.py  models.py  rag.py  schemas.py
ai-agent/tests/: test_rag.py
article-classifier/: .env.example  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml
article-classifier/alembic/versions/: 001_initial.py  002_article_groups.py  003_rag_grouping.py
article-classifier/scripts/: classifier.sh  fly-setup.sh  migration_rag_grouping.sql  start-docker.sh
article-classifier/src/: classifier_service.py  config.py  constants.py  embedding_client.py  grouping_pipeline.py  grouping_schemas.py  grouping_service.py  main.py  models.py  pipeline.py  routes.py  schemas.py  similarity_service.py
article-classifier/tests/: test_classifier_service.py  test_embedding_client.py  test_grouping_pipeline.py  test_grouping_properties.py  test_grouping_service.py  test_routes.py  test_similarity_service.py
article-classifierb/: .env.example  pyproject.toml
article-classifierb/alembic/: env.py
article-classifierb/alembic/versions/: 001_initial.py
article-classifierb/src/: constants.py  database.py  main.py  models.py
article-classifierb/tests/: test_pipeline.py  test_routes.py
article-reader/: .dockerignore  .env.example  Dockerfile  README.md  fly.toml  package-lock.json  package.json  vite.config.ts
article-reader/scripts/: fly-setup.sh  start-docker.sh
article-reader/src/: app.css
article-reader/tests/: api.test.ts  (+4 more)
rag-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml
rss-feed/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
(+93 files in other folders)
