[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "article-classifier"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "langsmith>=0.1.0",
    "pydantic-settings>=2.2.0",
    "structlog>=24.1.0",
    "alembic>=1.13.0",
    "qdrant-client>=1.17.1",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.100.0",
    "respx>=0.21.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hypothesis]
max_examples = 100

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "hypothesis>=6.152.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
]
